2024-05-04T08:13:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8949150364 # 241
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-04
* notice: last 14d: unq all: 2 4
* notice: prev accum: outdated-unq outdated-all / unq all: 901 1642 / 904 1648
* notice: next accum: outdated-unq outdated-all / unq all: 902 1644 / 904 1648
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-20] / []

2024-05-02T16:14:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8927047924 # 236
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-02
* notice: last 14d: unq all: 3 6
* notice: prev accum: outdated-unq outdated-all / unq all: 899 1640 / 904 1648
* notice: next accum: outdated-unq outdated-all / unq all: 901 1642 / 904 1648
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-18] / []

2024-05-01T16:14:51Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8911857395 # 233
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-01
* notice: last 14d: unq all: 5 8
* notice: prev accum: outdated-unq outdated-all / unq all: 898 1638 / 904 1648
* notice: next accum: outdated-unq outdated-all / unq all: 899 1640 / 904 1648
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-17] / []

2024-05-01T00:58:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8903723052 # 231