@@ -1,21 +1,21 @@
 {
-  "timestamp" : "2024-05-04T08:13:45Z",
-  "count_outdated" : 1644,
-  "uniques_outdated" : 902,
-  "count" : 1648,
-  "uniques" : 904,
+  "timestamp" : "2024-05-08T16:15:24Z",
+  "count_outdated" : 1647,
+  "uniques_outdated" : 903,
+  "count" : 1649,
+  "uniques" : 905,
   "clones" : [
     {
-      "timestamp": "2024-04-24T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
+      "timestamp": "2024-04-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2024-04-30T00:00:00Z",
+      "timestamp": "2024-05-08T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
