@@ -1,14 +1,14 @@
 {
-  "count": 4,
+  "count": 2,
   "uniques": 2,
   "clones": [
     {
-      "timestamp": "2024-04-24T00:00:00Z",
-      "count": 3,
+      "timestamp": "2024-04-30T00:00:00Z",
+      "count": 1,
       "uniques": 1
     },
     {
-      "timestamp": "2024-04-30T00:00:00Z",
+      "timestamp": "2024-05-08T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
